--- a/composant_cle/Makefile
+++ b/composant_cle/Makefile
@@ -3,9 +3,8 @@ LIBS=-lpython3.9
 
 COMPOSANT = composant_cle
 
-LIB_ECC = micro-ecc/uECC
 LIBSO = ${COMPOSANT}.so
-LIBSO_OBJS = ${COMPOSANT}.o ${LIB_ECC}.o
+LIBSO_OBJS = ${COMPOSANT}.o micro-ecc/uECC.o
 
 include ../gcc.mk
 include ../pybind11.mk
